@@ -94,6 +94,13 @@ struct lib_ccx_ctx* init_libraries(struct ccx_s_options *opt)
 {
 	int ret = 0;
 
+    // Set logging functions for libraries
+    ccx_common_logging.debug_ftn = &dbg_print;
+    ccx_common_logging.debug_mask = opt->debug_mask;
+    ccx_common_logging.fatal_ftn = &fatal;
+    ccx_common_logging.log_ftn = &mprint;
+    ccx_common_logging.gui_ftn = &activity_library_process;
+
 	struct lib_ccx_ctx *ctx = malloc(sizeof(struct lib_ccx_ctx));
 	if(!ctx)
 		ccx_common_logging.fatal_ftn(EXIT_NOT_ENOUGH_MEMORY, "init_libraries: Not enough memory allocating lib_ccx_ctx context.");
@@ -136,13 +143,6 @@ struct lib_ccx_ctx* init_libraries(struct ccx_s_options *opt)
 	// Initialize some constants
 	ctx->screens_to_process = -1;
 	ctx->current_file = -1;
-
-	// Set logging functions for libraries
-	ccx_common_logging.debug_ftn = &dbg_print;
-	ccx_common_logging.debug_mask = opt->debug_mask;
-	ccx_common_logging.fatal_ftn = &fatal;
-	ccx_common_logging.log_ftn = &mprint;
-	ccx_common_logging.gui_ftn = &activity_library_process;
 
 	// Init shared decoder settings
 	ctx->dec_global_setting = init_decoder_setting(opt);
